Update Route.java
Akiwrapper no longer uses a static Unirest instance. It is not provided
by the builder.